DevTools: Fix rounding error in animation startTime calculations.

The test was flaky because of the rounding errors.

BUG=856955

Change-Id: I089ff4efa05935433c6f1cd3a89f8cbad26879d5
Reviewed-on: https://chromium-review.googlesource.com/1123768
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Alexei Filippov <alph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572265}
Former-commit-id: cb297d9bbd8ec3dc6d0789045973e6d95a0c8761