third_party/WebKit/LayoutTests/inspector-protocol/animation/animation-multiple-frames.js
@@ -24,7 +24,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     if (!lastStartTime || animation.startTime >= lastStartTime)
       testRunner.log('Animation started: start time is valid');
     else if (lastStartTime)
-      testRunner.log('Animation started: invalid startTime!' + animation.startTime + '.' + lastStartTime);
+      testRunner.log(`Animation started: invalid startTime: ${animation.startTime} < ${lastStartTime}`);
     lastStartTime = animation.startTime;
     numberAnimationsCaptured++;
 
